Reset border colors to original values, fix layout issues

--- a/frontend/packages/console-shared/src/components/namespace/NamespaceDropdown.scss
+++ b/frontend/packages/console-shared/src/components/namespace/NamespaceDropdown.scss
@@ -9,6 +9,7 @@
   // Position is to ensure that the dropdown doesn't push content down when opened
   // Especially on the /topology/ns/[namespace]?view=graph page
   position: absolute;
+  z-index: 9999; // same as popper
 
   // This allows the menu to be longer than the menu toggle
   // Currently PatternFly does not support a min width on the menu component
